# demo-jvm

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/design/: directory-structure.md
src/: CMakeLists.txt  main.cpp
src/class_loader/: CMakeLists.txt  attributes.cpp  attributes.hpp  byte_reader.hpp  class_file.h  class_file_parser.cpp  class_file_parser.h  class_loader.cpp  class_loader.h  constant_pool.cpp  constant_pool.h  members.cpp  members.h  version.h
src/common/: CMakeLists.txt  access_flags.hpp  endian.hpp  types.h
src/engine/: CMakeLists.txt  bytecode_reader.h  interpreter.cpp  interpreter.h  opcode.h
src/runtime/: CMakeLists.txt  constant_pool.cpp  constant_pool.h  field.h  frame.h  klass.cpp  klass.h  local_variables.h  method.h  method_area.cpp  method_area.h  operand_stack.h  slot.h  stack.h  thread.h
tests/: .clang-tidy  CMakeLists.txt
tests/data/: CMakeLists.txt
tests/data/java/: ArithmeticTest.java  ConstantTest.java  ControlFlowTest.java  ConversionTest.java  HelloWorld.java  KlassTestData.java  LoadStoreTest.java  MethodInvocationTest.java  StackTest.java
tests/modules/: CMakeLists.txt
tests/modules/class_loader/: CMakeLists.txt  byte_reader_test.cpp  class_file_test.cpp  class_loader_test.cpp
tests/modules/common/: CMakeLists.txt  access_flags_test.cpp  endian_test.cpp
tests/modules/engine/: CMakeLists.txt  README.md  interpreter_arithmetic_test.cpp  interpreter_constants_test.cpp  interpreter_control_flow_test.cpp  interpreter_conversion_test.cpp  interpreter_load_store_test.cpp  interpreter_method_invocation_test.cpp  interpreter_stack_test.cpp  interpreter_test_base.h
tests/modules/runtime/: CMakeLists.txt  constant_pool_test.cpp  klass_test.cpp  local_variables_test.cpp  method_area_test.cpp  operand_stack_test.cpp
tests/sanity/: CMakeLists.txt  env_test.cpp
